# centerpoint.axera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  build650.sh
centerpoint_export/: config.json
centerpoint_export/configs/nusc/pp/: nusc_centerpoint_pp_02voxel_two_pfn_10sweep_demo.py  nusc_centerpoint_pp_02voxel_two_pfn_10sweep_demo_export_onnx.py  nusc_centerpoint_pp_02voxel_two_pfn_10sweep_demo_mini.py
centerpoint_export/det3d/torchie/trainer/: checkpoint.py
centerpoint_export/tools/: merge_pfe_rpn_model.py  simplify_model.py
include/: centerpoint_common.hpp  data_loader.hpp  postprocess.hpp  preprocess.hpp  timer.hpp  utils.hpp  visualization.hpp
onnx_and_ax_demo/: README.md  extract_data_simple.py  inference_axmodel.py  inference_onnx.py  prepare_calib_data.py
src/: centerpoint_common.cpp  data_loader.cpp  main.cpp  postprocess.cpp  preprocess.cpp  utils.cpp  visualization.cpp
toolchains/: aarch64-none-linux-gnu.toolchain.cmake
